[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.37.0", "build>=0.7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-heartbeat"
authors = [{ name = "PBS Core Services", email = "pbsi-team-core-services@pbs.org" }]
description = "A simple reusable app that checks and lists various information about your project and its dependencies"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["django", "heartbeat", "health check", "dependency status"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Django>=4,<5.3",
    "psutil",
    "setuptools"
]
version = "2.2.4"

[tool.setuptools]
zip-safe = false
include-package-data = true

[project.urls]
Homepage = "https://github.com/pbs/django-heartbeat"
